Fix scroll bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ body {
 	display: grid;
 	place-items: center;
 	position: relative;
-	overflow: hidden;
 }
 
 .wrapper {
